// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing GridItem correcto snapshot del componente 1`] = `
<Fragment>
  <h3>
    Fury Road
  </h3>
  <p>
    Cargando
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`testing GridItem debe mostrar items cuando se cargan imagenes con mi hook - useEffect 1`] = `
<Fragment>
  <h3>
    Fury Road
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id={1}
      key="1"
      title="mi foto"
      url="https://www.1.cl/hola.jpg"
    />
    <GifGridItem
      id={2}
      key="2"
      title="mi foto 2"
      url="https://www.1.cl/hol222a.jpg"
    />
  </div>
</Fragment>
`;
